- added base converters to abstract spreadsheet builder