@@ -3,6 +3,7 @@ package pt.utl.ist.fenix.tools.excel;
 public class IntegerCellConverter implements CellConverter {
     @Override
     public Object convert(Object source) {
-	return new Double(((Integer) source).doubleValue());
+	final Integer value = (Integer) source;
+	return (value != null) ? new Double(value.doubleValue()) : Double.valueOf(0d);
     }
 }
